# mcp-asusrouter

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml  server.py  tool_helpers.py
docs/plans/: 2026-06-28_uv-conversion-cleanup.md
docs/superpowers/plans/: 2026-06-28-ddns-and-parental-control-tools.md  2026-06-28-hardware-verification-checklist.md
docs/superpowers/specs/: 2026-06-28-ddns-and-parental-control-tools-design.md
tests/: test_server_tools.py  test_smoke.py  test_tool_helpers.py
